WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83531
Classic interpreter's GC hooks shouldn't attempt to scan instructions for code blocks that are currently being generated
https://bugs.webkit.org/show_bug.cgi?id=83531
Summary
Classic interpreter's GC hooks shouldn't attempt to scan instructions for cod...
Filip Pizlo
Reported
2012-04-09 17:52:48 PDT
Patch forthcoming. <
rdar://problem/11215200
>
Attachments
the patch
(1.60 KB, patch)
2012-04-09 17:57 PDT
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-04-09 17:57:45 PDT
Created
attachment 136356
[details]
the patch
Filip Pizlo
Comment 2
2012-04-09 18:01:05 PDT
Landed in
http://trac.webkit.org/changeset/113648
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug