Classic interpreter's GC hooks shouldn't attempt to scan instructions for code blocks that are currently being generated https://bugs.webkit.org/show_bug.cgi?id=83531 <rdar://problem/11215200>

Reviewed by Gavin Barraclough.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::stronglyVisitStrongReferences):



Canonical link: https://commits.webkit.org/100958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113648 268f45cc-cd09-0410-ab3c-d52691b4dbfc